--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <button class=" gradient px-6 py-1">Get Started</button>
 
             </div>
-            <div class="right w-[50%]  pl-12">
+            <div class="right w-[50%]  pl-20">
                 <div class="relative">
                     <div
                         class="w-[400px] h-[400px]  rounded-full bg-gradient-to-b from-orange-600 to-yellow-400 blur-2xl opacity-50">
                     </div>
                     <div
-                        class="circle w-[350px] h-[350px] rounded-full bg-gradient-to-b from-orange-600 to-yellow-400 rotate-[35deg] absolute top-1/2 left-[42%] -translate-x-1/2 -translate-y-1/2  ">
+                        class="circle w-[350px] h-[350px] rounded-full bg-gradient-to-b from-orange-600 to-yellow-400 rotate-[35deg] absolute top-1/2 left-[36%] -translate-x-1/2 -translate-y-1/2  ">
                         <button
                             class="absolute -rotate-[35deg] px-5 py-1 border-2 rounded-full bg-transparent opacity-90 font-semibold text-sm top-1/2 -left-24">Paper
                             Money is Going Away...</button>
@@ -354,7 +354,7 @@
                 </div>
             </div>
 
-            <div class="sec w-[50%] pl-16">
+            <div class="sec w-[50%] pl-40">
                 <div class="">
 
                     <div
@@ -377,7 +377,7 @@
             </div>
         </div>
 
-        <div class="arrow w-full mb-32 mt-24">
+        <div class="arrow w-full mb-36 mt-24 p-10">
             <div class=" flex justify-between   items-center">
 
                 <div class=" color w-[300px] h-[350px] rounded-md  p-10">
@@ -512,7 +512,7 @@
                 </div>
             </div>
 
-            <div class="transaction w-full px-32 mt-20 mb-10 relative">
+            <div class="transaction w-full px-40 mt-20 mb-10 relative">
                 <div
                     class="w-[500px] h-[500px]  opacity-70 -mt-28 rounded-full bg-gradient-to-b  from-orange-600 to-yellow-400 blur-3xl  -translate-x-56 z-[1] relative">
                 </div>
@@ -536,7 +536,7 @@
                             <h2>Recent Payouts</h2>
                         </div>
                     </div>
-                    <div class="flex justify-between items-center ">
+                    <div class="flex justify-between items-center gap-56">
                         <div class="w-[410px] h-[250px] bg-zinc-800  relative ml-7 mt-16 round">
                             <div
                                 class="w-[430px] h-[240px] bg-zinc-500  absolute left-1/2  -translate-x-1/2 -tranlate-y-1/2 round">
